--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,16 +6,28 @@ h3 {
     font-size: 18px
 }
 
+a {
+    color: inherit !important;
+    background-image: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 1px, #000 1px, #000 2px, rgba(0, 0, 0, 0) 2px) !important;
+}
+
 .page {
+    color: #000;
     display: flex;
 }
 
 .sidebar {
-    padding: 1em;
+    padding: 1em 2em;
     min-width: 300px;
     max-width: 300px;
+    text-transform: uppercase;
 }
 
+.links {
+    li {
+        list-style: none;
+    }
+}
 .content {
     padding: 1em;
 }
