--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,15 +1,3 @@
-h1 {
-    font-size: 24px;
-}
-
-h3 {
-    font-size: 18px
-}
-
-a {
-    color: inherit !important;
-    background-image: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 1px, #000 1px, #000 2px, rgba(0, 0, 0, 0) 2px) !important;
-}
 
 .page {
     color: #000;
@@ -17,10 +5,26 @@ a {
 }
 
 .sidebar {
+
     padding: 1em 2em;
     min-width: 300px;
     max-width: 300px;
     text-transform: uppercase;
+
+    h1 {
+        font-size: 26px;
+    }
+
+    h3 {
+        font-size: 21px;
+        font-weight: normal;
+    }
+
+    a {
+        color: inherit;
+        background-image: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 1px, #000 1px, #000 2px, rgba(0, 0, 0, 0) 2px);
+    }
+
 }
 
 .links {
@@ -34,5 +38,6 @@ a {
 
 .copyright {
     margin-top: 1em;
-    font-size: 80%;
+    font-size: 70%;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
