--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -41,3 +41,7 @@
     font-size: 70%;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+.image {
+    margin-bottom: 1em;
+}
