--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,17 +2,27 @@
 .page {
     color: #000;
     display: flex;
+    flex-direction: column;
+    @media(min-width: 1024px) {
+        flex-direction: row;
+    }
 }
 
 .sidebar {
+    padding: 1em;
+    @media(min-width: 1024px) {
+        min-width: 300px;
+        max-width: 300px;
+        position: -webkit-sticky;
+        position: sticky;
+        top: 0;
+    }
 
-    padding: 1em 2em;
-    min-width: 300px;
-    max-width: 300px;
     text-transform: uppercase;
 
     h1 {
         font-size: 26px;
+        margin-top: 1em;
     }
 
     h3 {
@@ -37,9 +47,10 @@
 }
 
 .copyright {
-    margin-top: 1em;
-    font-size: 70%;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 70%;
+    margin: 1em 0;
+    text-align: center;
 }
 
 .image {
