--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,28 +1,13 @@
 
 .page {
     color: #000;
-    display: flex;
-    flex-direction: column;
-    @media(min-width: 1024px) {
-        flex-direction: row;
-    }
-}
-
-.sidebar {
-    padding: 1em;
-    @media(min-width: 1024px) {
-        min-width: 300px;
-        max-width: 300px;
-        position: -webkit-sticky;
-        position: sticky;
-        top: 0;
-    }
-
-    text-transform: uppercase;
 
     h1 {
         font-size: 26px;
         margin-top: 1em;
+        a {
+            background: none;
+        }
     }
 
     h3 {
@@ -34,7 +19,21 @@
         color: inherit;
         background-image: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 1px, #000 1px, #000 2px, rgba(0, 0, 0, 0) 2px);
     }
+}
 
+.sidebar {
+    padding: 1em;
+    @media(min-width: 1024px) {
+        width: 300px;
+        float: left;
+        min-width: 300px;
+        max-width: 300px;
+        position: -webkit-sticky;
+        position: sticky;
+        top: 0;
+    }
+
+    text-transform: uppercase;
 }
 
 .links {
@@ -44,6 +43,7 @@
 }
 .content {
     padding: 1em;
+    overflow: auto;
 }
 
 .copyright {
