--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,39 +1,50 @@
+body {
+    color: #333;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 14px;
+}
 
-.page {
-    color: #000;
+h1, h2 {
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: 700;
+    margin: 1em 0 .5em 0;
+}
 
-    h1 {
-        font-size: 26px;
-        margin-top: 1em;
-        a {
-            background: none;
-        }
-    }
-
-    h3 {
-        font-size: 21px;
-        font-weight: normal;
-    }
-
+h1 {
+    font-size: 150%;
+    margin-top: 1em;
     a {
-        color: inherit;
-        background-image: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 1px, #000 1px, #000 2px, rgba(0, 0, 0, 0) 2px);
+        background: none;
+        text-decoration: none;
     }
+}
+
+h2 {
+    font-size: 120%;
+}
+
+ul {
+    margin: 0 1em;
+    padding: 0 0 2em 0;
+}
+
+a {
+    color: inherit;
 }
 
 .sidebar {
     padding: 1em;
+    text-transform: uppercase;
+
     @media(min-width: 1024px) {
-        width: 300px;
         float: left;
-        min-width: 300px;
-        max-width: 300px;
+        max-width: 200px;
+        min-width: 200px;
         position: -webkit-sticky;
         position: sticky;
         top: 0;
+        width: 200px;
     }
-
-    text-transform: uppercase;
 }
 
 .links {
@@ -47,7 +58,6 @@
 }
 
 .copyright {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 70%;
     margin: 1em 0;
     text-align: center;
@@ -62,15 +72,13 @@
         height: 0;
         margin: 0;
         max-height: calc(100vh - 2em);
-        opacity: 0;
+        opacity: .75;
 
         &--active {
             opacity: 1;
             width: auto;
             height: auto;
-            transition: opacity .5s ease-in;
-            transition: width 0s none .5s;
-            transition: height 0s none .5s;
+            transition: opacity .25s ease-in;
         }
     }
 }
