--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -35,6 +35,11 @@ a {
     color: inherit;
 }
 
+.page {
+    max-width: 1400px;
+    margin: 0 auto;
+}
+
 .sidebar {
     margin-bottom: 2rem;
     text-transform: uppercase;
@@ -71,8 +76,7 @@ a {
 }
 
 .image {
-    margin-bottom: 1em;
-    max-height: calc(100vh - 3rem);
+    margin-bottom: 1.6em;
 }
 
 .slideshow {
