--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -91,7 +91,7 @@ a {
 }
 
 .backToTop {
-    background: #fff;
+    // background: #fff;
     bottom: calc(.25rem + .75vw);
     opacity: 0;
     padding: .25rem;
@@ -99,6 +99,8 @@ a {
     right: -3rem;
     text-decoration: none;
     transition: all .1s ease-out;
+    -webkit-filter: drop-shadow( 3px 3px 2px rgba(255, 255, 255, 1));
+    filter: drop-shadow( 0 0 4px rgba(255, 255, 255, 1));
     &--active {
         right: calc(.5rem + 0.75vw);
         opacity: 1;
