--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -17,7 +17,6 @@ h1, h2 {
 
 h1 {
     font-size: 150%;
-    margin-top: 1em;
     a {
         background: none;
         text-decoration: none;
@@ -43,7 +42,7 @@ a {
 }
 
 .sidebar {
-    margin-bottom: 0;
+    margin-bottom: 2em;
     text-transform: uppercase;
 
     @media(min-width: $breakpoint) {
@@ -81,6 +80,13 @@ a {
 
     @media(min-width: $breakpoint) {
         padding: 1em;
+    }
+
+    h1 {
+        margin-top: 0;
+        @media(min-width: $breakpoint) {
+            margin-top: 1em;
+        }
     }
 }
 
