--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -104,6 +104,8 @@ a {
 
 .backToTop {
   bottom: calc(0.25rem + 0.75vw);
+  border: none;
+  background: transparent;
   opacity: 0;
   padding: 0.25rem;
   position: fixed;
