--- a/gatsby-michal-domarus-personal/src/scss/style.scss
+++ b/gatsby-michal-domarus-personal/src/scss/style.scss
@@ -13,7 +13,7 @@ h1,
 h2 {
 	font-family: "Roboto Condensed", sans-serif;
 	font-weight: 700;
-	margin: 1em 0 0.5em 0;
+	margin: 1rem 0 0.5rem 0;
 }
 
 h1 {
@@ -49,8 +49,6 @@ a {
 
 	@media (min-width: $breakpoint) {
 		float: left;
-		// max-width: 200px;
-		// min-width: 200px;
 		padding: 1em;
 		position: -webkit-sticky;
 		position: sticky;
