--- a/gatsby-michal-domarus-personal/src/scss/style.scss
+++ b/gatsby-michal-domarus-personal/src/scss/style.scss
@@ -37,27 +37,9 @@ a {
 	color: inherit;
 }
 
-.page {
-	max-width: 1400px;
-	margin: 0 auto;
-	min-height: calc(100vh - 6em);
-}
-
-.sidebar {
-	margin-bottom: 2em;
-	text-transform: uppercase;
-
-	@media (min-width: $breakpoint) {
-		float: left;
-		padding: 1em;
-		position: -webkit-sticky;
-		position: sticky;
-		top: 0;
-		width: 200px;
-	}
-}
-
-.links {
+menu {
+	margin: 0;
+	padding: 0;
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
@@ -72,11 +54,31 @@ a {
 	}
 }
 
+.page {
+	max-width: 1400px;
+	margin: 0 auto;
+	min-height: calc(100vh - 6em);
+}
+
+nav {
+	margin-bottom: 2em;
+	text-transform: uppercase;
+
+	@media (min-width: $breakpoint) {
+		float: left;
+		padding: 1em;
+		position: -webkit-sticky;
+		position: sticky;
+		top: 0;
+		width: 200px;
+	}
+}
+
 .instagram {
 	width: 1em;
 }
 
-.content {
+article {
 	overflow: hidden;
 
 	@media (min-width: $breakpoint) {
@@ -91,7 +93,7 @@ a {
 	}
 }
 
-.copyright {
+footer {
 	margin: 1em 0;
 	text-align: center;
 
